--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <!-- Put CSS Link here!-->
   <title>CSS Practice</title>
 </head>
@@ -108,5 +108,8 @@
   <pre>
     <h1 id="myHeaderId">Header!</h1>
   </pre>
+  <div class="turtle">Hi My Name Is Katelyn!!</div>
+  <p id="katelyn">This is an ID</p>
+  
 </body>
 </html>
